service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-app-service
spec:
  selector:
    app: node-app # the ingress will forward traffic to this service using this label
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: NodePort # this will expose the service to the outside world
